--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "inertia-sails": "^0.2.2",
+    "nanoid": "^3.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sails": "^1.5.2",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@rsbuild/plugin-react": "^0.6.2",
+    "@tailwindcss/typography": "^0.5.13",
     "create-sails-generator": "^0.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
