--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@rsbuild/plugin-react": "^0.6.2",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "^20.12.12",
     "create-sails-generator": "^0.0.3",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
