--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "inertia-sails": "^0.2.2",
+    "lodash.debounce": "^4.0.8",
     "nanoid": "^3.3.7",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
